# Codexify

./: # 📜 PulseOS Ritual Commit.md  .dockerignore  .env.demo.example  .env.example  .env.private-preview.example  .env.template  .env.tester.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  :memory:  AGENTS.md  API_AUDIT_REPORT.md  AUDIT_REPORT_2025-11-11.md  AXIS_SYSTEM_PROMPT.md  CHANGELOG.beta.md  CHANGELOG.md  CLAUDE.md  CLI_commands.txt  CODEBASE_SUMMARY.md  CONTRIBUTING.md  Companion_Codex_Notion_Structure.json  DHI_MIGRATION_REPORT.md  DOCKERFILE_OPTIMIZATIONS.md  FILE_STRUCTURE_MAP.txt  GEMINI.md  Guardian_Codex_Integration.md  KEEPER.md  KimiBox.md  LICENSE  Makefile  POSTGRES_REFACTOR_SUMMARY.md  QUICK_REFERENCE.md  README.md  README_EXPLORATION.md  SECURITY-REWRITE-NOTICE.md  SECURITY.md  SETUP_INSTRUCTIONS.md  Scratchfile.md  (+74 more)
.github/: pull_request_template.md
.local.example/: openai_export_path.txt.example
.playwright-mcp/: page-2026-05-06T16-49-35-311Z.yml
Codexify-Beta/: .env.example  AUTHORIZATION.md  README.md  docker-compose.yml
Demo-Assets/: codexify_demo_persona_summary.md  reusable_product_demo_prompt_package.md
MVP ROADMAP/: 09-18-25-dailytasks.md
MemoryOS-main/: README.md
MemoryOS_main/: README.md  __init__.py  embedding_provider.py  example.py  local_embedder.py  openai_embedder.py  requirements.txt
README-vectorstore/: backend-vector.md
archive/: root-package-lock.json
archive/secure_vault/: Cargo.toml
archive/secure_vault/src/: PersonaEngine.rs  biometric.rs  commands.rs  desktop_keyring.rs  lib.rs  local_model.rs  memory_fabric.rs  vault.rs
backend/: Dockerfile  Dockerfile.prod  alembic.ini  compiled_runtime_entry.py  entrypoint-dev.sh  llm_overrides.py  requirements-ci.txt  requirements.txt  run-server.sh  wait_for_db.py
codex_memory/: ritual_test.md
codex_ralph_loop/: CODEX.md  README.md  prd.json  progress.txt
codex_runner/: .gitignore  README.md  README.py  README_NEW.md  RELEASE.md  __main__.py  model_id_helper.py  package.json  pyproject.toml  runner.py  tui_app.py  tui_commands.py  tui_state.py
codex_runner/audits/: sample_audit_prompt.md
codex_runner/codexify_campaign_runner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
codex_runner/prompts/: audit_report_to_campaign_runner.md  mega_audit.md  task_file_template.md
codex_runner/schemas/: campaign_output.schema.json  campaign_set.schema.json  mega_audit_output.schema.json  task_result.schema.json
codex_runner/src/: agent-wrapper.js  profile.py  runner_cli.py
codex_runner/templates/: activation_prompt.md.tmpl
codex_runner/tests/: test_campaign_task_lane_schema.py  test_intention_packet_prompting.py  test_provider_dispatch.py  test_runner_entry.py  test_runner_paths.py  test_tui_commands.py  test_tui_palette.py  test_tui_state.py
codex_tasks/: 2025-08-13-CLI-tui-api-sync.md  2025-08-13-add-choice-and-path-validation.md  2025-08-13-add-tui-validation.md  2025-08-13-api-launcher.md  2025-08-13-codexify-export-dryrun-and-config-check.md  2025-08-13-codexify-gdrive-links-and-url.md  2025-08-13-codexify-oauth-status.md  2025-08-13-export-gdrive supports--file-.md  2025-08-13-export-gdrive-auto-creates-template-when --file-path-missing.md  2025-08-13-fix-embed-callback-defaults.md  2025-08-13-gdrive-token-in-secrets.md  2025-08-13-log-file-handler.md  2025-08-13-porting-map.md  2025-08-13-show-choices-inline.md  2025-08-13-tools-api-better-errors.md  2025-08-13-tools-api.md  2025-08-13-tui-oauth-status.md  2025-08-13-wire-codexify-router.md  2025-08-14-codexify-oauth-begin-and-auto-flow.md  2025-08-14-drive-client-from-tokenjson.md  2025-08-14-gdrive-token-and-folderid-fixes.md  2025-08-15-verify-log-scrubbing-and-server-logging.md  2025-08-22-finish-persona-appshell+fix-types+glass-wiring.md  2025-08-22-fix-vitest-globals-glass-exports-webgl-types-and-tighten.md  2025-08-22-install-tailwind-wire-in-css.md  2025-08-22-make-alldatetimes-timezone-aware-utc.md  2025-08-22-refactor-react-ui-migration.md  2025-08-22-split-the-monolithic-react-component.md  2025-08-22-ui-continuous-refactor.md  2025-08-22-ui-react-tuari-polishing-touches.md  2025-08-23-UI-FingersCrossed.md  2025-08-23-add-commonjs-tailwind-config-twin.md  2025-08-23-update-ui.md  2025-08-28-hotfix-workspace-tiles.md  2025-08-28-unify-preview-tiles.md  desktop_wiring_and_ui.yml  run_with_safety.md  safe_task.md
codex_templates/: banana_alias  standard_alias.json  standard_fieldmap.json
codexify/: prompts.py  system_prompt_builder.py
config/: public_routes.yaml  trusted-remote.env  trusted-remote.env.example
data/: credentials.json  package-lock.json  package.json  token.pickle  trust_registry.json
db/: SETUP_GUIDE.md  postgres_setup.py  sqlite_media_setup.py
demo/: system_demo.py
docs/: CHATGPT_MIGRATION_GUIDE.md  CONFIGURATION.md  DOCKER_SETUP.md  MVP_STATE_MAP.md  README.md  SECURITY.md  SOC_ALIGNMENT.md  codexify-mvp-roadmap-2026-02-15.md  codexify-mvp-roadmap-2026-02-24.md  codexify-mvp-roadmap-2026-03-04.md  codexify-mvp-roadmap.md  feedback-intake.md  graph_rag_eval.md  imprint_zero_design.md  (+5 more)
tools/codex-runner/: README.md  pyproject.toml
tools/codex-runner/src/codex_runner/: __init__.py  cli.py  runner.py
tools/codex-runner/src/codex_runner/resources/audits/: sample_audit_prompt.md
tools/codex-runner/src/codex_runner/resources/schemas/: campaign_output.schema.json
(+3636 files in other folders)
