


[project]
name = "guardian_codex"
version = "0.1.0"
description = "PulseOS Guardian Backend"
authors = [
    { name="Catalyst Design Labs", email="dev@catalystlabs.ai" }
]
dependencies = [
    "fastapi",
    "httpx",
    "python-dotenv",
    "uvicorn",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pytest",
]

[tool.setuptools.packages.find]
include = ["guardian", "guardian_codex"]
