[project]
name = "guardian_codex"
version = "0.1.0"
description = "PulseOS Guardian Backend"
authors = [
    { name="Catalyst Design Labs", email="dev@catalystlabs.ai" }
]
dependencies = [
    "fastapi",
    "httpx",
    "python-dotenv",
    "uvicorn",
    "PyYAML",
    "click",
    "pydantic",
    "pydantic-settings",
    "SQLAlchemy",
    "aiosqlite",
    "structlog",
    "importlib-metadata",
    "pluggy",
    "requests",
    "google-cloud-texttospeech",
    "typer>=0.12.3",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "isort",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "mcp",
    "notion-client",
    "markitdown",
]
tui = [
    "textual>=0.50,<1",
    "rich>=13",
]
rag = [
    "chromadb>=0.5",
    "faiss-cpu>=1.7",
    "sentence-transformers>=2.6",
    "numpy>=1.26",
    "openai>=1.0",
]

[project.scripts]
guardian = "guardian.cli.memoryos_cli:cli"
guardian-diag = "guardian.tui.diag_app:main"
guardian-main = "guardian.guardian_main:app"
guardian-api = "guardian.server.run:main"

[tool.setuptools.packages.find]
include = ["guardian", "memoryos"]

[tool.setuptools.package-data]
"guardian.prompts" = ["*.md", "*.txt", "*.yaml"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
(
  \.git
  | \.venv
  | build
  | dist
  | guardian\.egg-info
  | migrations
  | archive
  | .*_pb2\.py
)
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["guardian"]
skip = [
  ".venv",
  "build",
  "dist",
  "guardian.egg-info",
  "migrations",
  "archive"
]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
markers = ["asyncio"]

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88           # match Black
extend-ignore = ["E203"]

[tool.ruff.lint]
extend-ignore = ["E203"]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["E402", "F841"]
"guardian/plugins/**/tests/**/*.py" = ["E402"]