[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codexify-campaign-runner"
version = "0.1.0"
description = "Deterministic Campaign Runner with TUI orchestration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "textual>=0.70.0",
]

[project.scripts]
codex-runner = "codex_runner.__main__:main"
codex_runner = "codex_runner.__main__:main"

[project.optional-dependencies]
dev = [
  "build>=1.0",
  "pytest>=8.0",
  "twine>=5.0",
]

[tool.setuptools]
packages = ["codex_runner"]
include-package-data = true

[tool.setuptools.package-dir]
codex_runner = "."

[tool.setuptools.package-data]
codex_runner = [
  "prompts/*.md",
  "schemas/*.json",
  "templates/*.tmpl",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
