[package]
name = "secure_vault"
version = "0.1.0"
edition = "2021"
description = "Tauri plugin for Codexify secure vault"
license = "MIT"
authors = ["Resonant Jones <resonant_jones@example.com>"]
repository = "https://github.com/Resonant-Jones/guardian-backend"
homepage = "https://github.com/Resonant-Jones/guardian-backend"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tauri = { version = "1.5", features = ["api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13"
rand = "0.8"
ring = "0.16"
keyring = "1.0"
uuid = { version = "1.3", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
# Platform specific biometric crates
security-framework = { version = "2.4", optional = true }
windows-sys = { version = "0.48", optional = true }

[features]
default = ["macos", "windows"]
macos = ["security-framework"]
windows = ["windows-sys"]
