[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-runner"
version = "0.1.0"
description = "Codex Runner CLI for audit-driven campaign execution."
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
codex-runner = "codex_runner.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
codex_runner = ["resources/**"]
